fixed spacing issue resultant from font change in dropdown menu

--- a/styles/Dropdown.module.css
+++ b/styles/Dropdown.module.css
@@ -77,7 +77,7 @@
 	background: transparent;
 	color: #fff;
 	opacity: 0.7;
-	margin: -4.1rem 0 0 -0.5rem;
+	margin: -4.2rem 0 0 -0.5rem;
 }
 
 @media (max-width: 880px) {
